syntax = "proto3";

package delivery.v1;
option go_package = "api/delivery/v1;deliveryv1";

import "google/protobuf/timestamp.proto";

// Сущность доставки
message Delivery {
  int32 id = 1;
  int32 order_id = 2;
  int32 customer_id = 3;
  int32 courier_id = 4;
  string status = 5;
  string priority = 6;
  string delivery_address = 7;
  google.protobuf.Timestamp estimated_delivery_time = 8;
  google.protobuf.Timestamp delivered_at = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message GetDeliveryRequest {
  int32 id = 1;
}

message GetDeliveryResponse {
  Delivery delivery = 1;
}

message UpdateStatusRequest {
  int32 id = 1;
  string status = 2;
}

message AssignCourierRequest {
  int32 id = 1;
  int32 courier_id = 2;
}

message MarkAsDeliveredRequest {
  int32 id = 1;
  google.protobuf.Timestamp delivered_at = 2;
}

message Empty {}

service DeliveryService {
  rpc GetDelivery(GetDeliveryRequest) returns (GetDeliveryResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (Empty);
  rpc AssignCourier(AssignCourierRequest) returns (Empty);
  rpc MarkAsDelivered(MarkAsDeliveredRequest) returns (Empty);
}
